--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
         @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
         body {
-            background-color: rgb(0, 124, 201);
+            background-color: rgb(0, 201, 191);
             font-family: Poiret One;
         }
         .widget {
@@ -115,12 +115,14 @@
             border: none;
         }
         input[type='submit']{
-            background-color: rgb(174, 201, 255);
+            background-color: rgb(25, 90, 81);
+            color: white;
             transition: 0.3s;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         }
         input[type='submit']:hover{
             background-color: rgb(0, 38, 115);
+            cursor: pointer;
             color: white;
         }
         
